# timetracker

./: CMakeLists.txt  LICENSE  README.md  api.cpp  api.h  app.rc  auth.cpp  auth.h  fonts.qrc  http.cpp  http.h  icons.qrc  images.qrc  key_logger.cpp  key_logger.h  lupdate_ru_RU.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  time-tracker.pro  timer.cpp  timer.h
deploy/linux/: exclude.libs
deploy/macos/: exclude.libs  logo.icns
deploy/windows/: inno_setup.iss
qml/: AppAboutPage.qml  AppActivityPage.qml  AppAuthPage.qml  AppLoggingPage.qml  AppSidebarDrawer.qml  AppTablePage.qml  BriefDialog.qml  DropDownPane.qml  DropDownView.qml  ImageButton.qml  MaterialSet.qml  MyFileDialog.qml  MyFlickable.qml  MySettings.qml  MyTextField.qml  PreferencesPage.qml  RestApiSet.qml  TintedImage.qml  main.qml
qml/+qt6/: ImageButton.qml  MyFileDialog.qml  MySettings.qml  TintedImage.qml
resources/: AppIcon.icns  logo.icns
src/: ActivityCounter.cpp  ActivityCounter.h  ActivityRecord.cpp  ActivityRecord.h  ActivityTableModel.cpp  ActivityTableModel.h  BaseThread.h  HttpRequest.cpp  HttpRequest.h  HttpRequestArgs.cpp  HttpRequestArgs.h  PermanentCache.h  SqliteConsumer.cpp  SqliteConsumer.h  SqliteExecQuery.cpp  SqliteExecQuery.h  SqliteProducer.cpp  SqliteProducer.h  SshKeygenEd25519.cpp  SystemHelper.cpp  SystemHelper.h  SystemSignal.cpp  SystemSignal.h  UiohookThread.cpp  UiohookThread.h  UrlModel.cpp  UrlModel.h  main.cpp  uiohook_logger.c  uiohook_logger.h
src/uiohook_darwin/: input_helper.c  input_hook.c  system_properties.c
src/uiohook_windows/: input_helper.c  input_hook.c  system_properties.c
src/uiohook_x11/: input_helper.c  input_hook.c  system_properties.c
